gimi: initial generator conversion tool